ADO latest code merge